--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.9"
   },
