--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "socket.io-client": "^4.8.3",
